program-tests/zero-copy-derive-test/tests/ui/fail/54_floating_point_types.stderr
error[E0277]: the trait bound `f32: ZeroCopyAt<'a>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:10
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |          ^^^^^^^^ the trait `ZeroCopyAt<'a>` is not implemented for `f32`
  |
  = help: the following other types implement trait `ZeroCopyAt<'a>`:
            i16
            i32
            i64
            u16
            u32
            u64
            u8
  = note: this error originates in the derive macro `ZeroCopy` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `f64: ZeroCopyAt<'a>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:10
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |          ^^^^^^^^ the trait `ZeroCopyAt<'a>` is not implemented for `f64`
  |
  = help: the following other types implement trait `ZeroCopyAt<'a>`:
            i16
            i32
            i64
            u16
            u32
            u64
            u8
  = note: this error originates in the derive macro `ZeroCopy` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `f32: ZeroCopyNew<'static>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:20
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |                    ^^^^^^^^^^^ the trait `ZeroCopyNew<'static>` is not implemented for `f32`
  |
  = help: the following other types implement trait `ZeroCopyNew<'a>`:
            u16
            u32
            u64
            u8
  = note: this error originates in the derive macro `ZeroCopyMut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `f64: ZeroCopyNew<'static>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:20
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |                    ^^^^^^^^^^^ the trait `ZeroCopyNew<'static>` is not implemented for `f64`
  |
  = help: the following other types implement trait `ZeroCopyNew<'a>`:
            u16
            u32
            u64
            u8
  = note: this error originates in the derive macro `ZeroCopyMut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `f32: ZeroCopyNew<'_>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:20
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |                    ^^^^^^^^^^^ the trait `ZeroCopyNew<'_>` is not implemented for `f32`
  |
  = help: the following other types implement trait `ZeroCopyNew<'a>`:
            u16
            u32
            u64
            u8
  = note: required for `Option<f32>` to implement `ZeroCopyNew<'static>`
note: required because it appears within the type `FloatingPointConfig`
 --> tests/ui/fail/54_floating_point_types.rs:7:12
  |
7 | pub struct FloatingPoint {
  |            ^^^^^^^^^^^^^
note: required by a bound in `Clone`
 --> $RUST/core/src/clone.rs
  |
  | pub trait Clone: Sized {
  |                  ^^^^^ required by this bound in `Clone`

error[E0277]: the trait bound `f32: ZeroCopyAtMut<'a>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:20
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |                    ^^^^^^^^^^^ the trait `ZeroCopyAtMut<'a>` is not implemented for `f32`
  |
  = help: the following other types implement trait `ZeroCopyAtMut<'a>`:
            i16
            i32
            i64
            u16
            u32
            u64
            u8
  = note: this error originates in the derive macro `ZeroCopyMut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `f64: ZeroCopyAtMut<'a>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:20
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |                    ^^^^^^^^^^^ the trait `ZeroCopyAtMut<'a>` is not implemented for `f64`
  |
  = help: the following other types implement trait `ZeroCopyAtMut<'a>`:
            i16
            i32
            i64
            u16
            u32
            u64
            u8
  = note: this error originates in the derive macro `ZeroCopyMut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `f32: ZeroCopyNew<'_>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:7:12
  |
7 | pub struct FloatingPoint {
  |            ^^^^^^^^^^^^^ the trait `ZeroCopyNew<'_>` is not implemented for `f32`
  |
  = help: the following other types implement trait `ZeroCopyNew<'a>`:
            u16
            u32
            u64
            u8
  = note: required for `Option<f32>` to implement `ZeroCopyNew<'static>`
note: required because it appears within the type `FloatingPointConfig`
 --> tests/ui/fail/54_floating_point_types.rs:7:12
  |
7 | pub struct FloatingPoint {
  |            ^^^^^^^^^^^^^
note: required by a bound in `light_zero_copy::ZeroCopyNew::ZeroCopyConfig`
 --> $WORKSPACE/program-libs/zero-copy/src/traits/zero_copy_new.rs
  |
  |     type ZeroCopyConfig;
  |     ^^^^^^^^^^^^^^^^^^^^ required by this bound in `ZeroCopyNew::ZeroCopyConfig`

error[E0277]: the trait bound `f32: ZeroCopyNew<'_>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:20
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |                    ^^^^^^^^^^^ the trait `ZeroCopyNew<'_>` is not implemented for `f32`
  |
  = help: the following other types implement trait `ZeroCopyNew<'a>`:
            u16
            u32
            u64
            u8
  = note: required for `Option<f32>` to implement `ZeroCopyNew<'static>`
note: required because it appears within the type `FloatingPointConfig`
 --> tests/ui/fail/54_floating_point_types.rs:7:12
  |
7 | pub struct FloatingPoint {
  |            ^^^^^^^^^^^^^
  = note: the return type of a function must have a statically known size

error[E0277]: the trait bound `f32: ZeroCopyAt<'a>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:10
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |          ^^^^^^^^ the trait `ZeroCopyAt<'a>` is not implemented for `f32`
  |
  = help: the following other types implement trait `ZeroCopyAt<'a>`:
            i16
            i32
            i64
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f64: ZeroCopyAt<'a>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:10
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |          ^^^^^^^^ the trait `ZeroCopyAt<'a>` is not implemented for `f64`
  |
  = help: the following other types implement trait `ZeroCopyAt<'a>`:
            i16
            i32
            i64
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f32: ZeroCopyAt<'a>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:10
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |          ^^^^^^^^ the trait `ZeroCopyAt<'a>` is not implemented for `f32`
  |
  = help: the following other types implement trait `ZeroCopyAt<'a>`:
            i16
            i32
            i64
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f64: ZeroCopyAt<'a>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:10
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |          ^^^^^^^^ the trait `ZeroCopyAt<'a>` is not implemented for `f64`
  |
  = help: the following other types implement trait `ZeroCopyAt<'a>`:
            i16
            i32
            i64
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f32: ZeroCopyAt<'_>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:10
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |          ^^^^^^^^ the trait `ZeroCopyAt<'_>` is not implemented for `f32`
  |
  = help: the following other types implement trait `ZeroCopyAt<'a>`:
            i16
            i32
            i64
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f64: ZeroCopyAt<'_>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:10
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |          ^^^^^^^^ the trait `ZeroCopyAt<'_>` is not implemented for `f64`
  |
  = help: the following other types implement trait `ZeroCopyAt<'a>`:
            i16
            i32
            i64
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f32: ZeroCopyAt<'_>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:8:16
  |
8 |     pub small: f32,
  |                ^^^ the trait `ZeroCopyAt<'_>` is not implemented for `f32`
  |
  = help: the following other types implement trait `ZeroCopyAt<'a>`:
            i16
            i32
            i64
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f64: ZeroCopyAt<'_>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:9:16
  |
9 |     pub large: f64,
  |                ^^^ the trait `ZeroCopyAt<'_>` is not implemented for `f64`
  |
  = help: the following other types implement trait `ZeroCopyAt<'a>`:
            i16
            i32
            i64
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f32: ZeroCopyAt<'_>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:10
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |          ^^^^^^^^ the trait `ZeroCopyAt<'_>` is not implemented for `f32`
  |
  = help: the following other types implement trait `ZeroCopyAt<'a>`:
            i16
            i32
            i64
            u16
            u32
            u64
            u8
  = note: required for `Vec<f32>` to implement `ZeroCopyAt<'_>`
  = note: this error originates in the derive macro `ZeroCopy` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `f64: ZeroCopyAt<'_>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:10
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |          ^^^^^^^^ the trait `ZeroCopyAt<'_>` is not implemented for `f64`
  |
  = help: the following other types implement trait `ZeroCopyAt<'a>`:
            i16
            i32
            i64
            u16
            u32
            u64
            u8
  = note: required for `Vec<f64>` to implement `ZeroCopyAt<'_>`
  = note: this error originates in the derive macro `ZeroCopy` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `f32: ZeroCopyAt<'_>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:8:9
  |
8 |     pub small: f32,
  |         ^^^^^ the trait `ZeroCopyAt<'_>` is not implemented for `f32`
  |
  = help: the following other types implement trait `ZeroCopyAt<'a>`:
            i16
            i32
            i64
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f64: ZeroCopyAt<'_>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:9:9
  |
9 |     pub large: f64,
  |         ^^^^^ the trait `ZeroCopyAt<'_>` is not implemented for `f64`
  |
  = help: the following other types implement trait `ZeroCopyAt<'a>`:
            i16
            i32
            i64
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f32: ZeroCopyAt<'_>` is not satisfied
  --> tests/ui/fail/54_floating_point_types.rs:10:9
   |
10 |     pub vec_f32: Vec<f32>,
   |         ^^^^^^^ the trait `ZeroCopyAt<'_>` is not implemented for `f32`
   |
   = help: the following other types implement trait `ZeroCopyAt<'a>`:
             i16
             i32
             i64
             u16
             u32
             u64
             u8
   = note: required for `Vec<f32>` to implement `ZeroCopyAt<'_>`

error[E0277]: the trait bound `f64: ZeroCopyAt<'_>` is not satisfied
  --> tests/ui/fail/54_floating_point_types.rs:11:9
   |
11 |     pub vec_f64: Vec<f64>,
   |         ^^^^^^^ the trait `ZeroCopyAt<'_>` is not implemented for `f64`
   |
   = help: the following other types implement trait `ZeroCopyAt<'a>`:
             i16
             i32
             i64
             u16
             u32
             u64
             u8
   = note: required for `Vec<f64>` to implement `ZeroCopyAt<'_>`

error[E0277]: the trait bound `f32: ZeroCopyAt<'_>` is not satisfied
  --> tests/ui/fail/54_floating_point_types.rs:12:9
   |
12 |     pub opt_f32: Option<f32>,
   |         ^^^^^^^ the trait `ZeroCopyAt<'_>` is not implemented for `f32`
   |
   = help: the following other types implement trait `ZeroCopyAt<'a>`:
             i16
             i32
             i64
             u16
             u32
             u64
             u8
   = note: required for `Option<f32>` to implement `ZeroCopyAt<'_>`

error[E0277]: the trait bound `f32: ZeroCopyNew<'static>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:20
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |                    ^^^^^^^^^^^ the trait `ZeroCopyNew<'static>` is not implemented for `f32`
  |
  = help: the following other types implement trait `ZeroCopyNew<'a>`:
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f64: ZeroCopyNew<'static>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:20
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |                    ^^^^^^^^^^^ the trait `ZeroCopyNew<'static>` is not implemented for `f64`
  |
  = help: the following other types implement trait `ZeroCopyNew<'a>`:
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f32: ZeroCopyNew<'static>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:20
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |                    ^^^^^^^^^^^ the trait `ZeroCopyNew<'static>` is not implemented for `f32`
  |
  = help: the following other types implement trait `ZeroCopyNew<'a>`:
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f64: ZeroCopyNew<'static>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:20
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |                    ^^^^^^^^^^^ the trait `ZeroCopyNew<'static>` is not implemented for `f64`
  |
  = help: the following other types implement trait `ZeroCopyNew<'a>`:
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f32: ZeroCopyNew<'static>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:20
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |                    ^^^^^^^^^^^ the trait `ZeroCopyNew<'static>` is not implemented for `f32`
  |
  = help: the following other types implement trait `ZeroCopyNew<'a>`:
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f64: ZeroCopyNew<'static>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:20
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |                    ^^^^^^^^^^^ the trait `ZeroCopyNew<'static>` is not implemented for `f64`
  |
  = help: the following other types implement trait `ZeroCopyNew<'a>`:
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f32: ZeroCopyAtMut<'a>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:20
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |                    ^^^^^^^^^^^ the trait `ZeroCopyAtMut<'a>` is not implemented for `f32`
  |
  = help: the following other types implement trait `ZeroCopyAtMut<'a>`:
            i16
            i32
            i64
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f64: ZeroCopyAtMut<'a>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:20
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |                    ^^^^^^^^^^^ the trait `ZeroCopyAtMut<'a>` is not implemented for `f64`
  |
  = help: the following other types implement trait `ZeroCopyAtMut<'a>`:
            i16
            i32
            i64
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f32: ZeroCopyAtMut<'_>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:8:16
  |
8 |     pub small: f32,
  |                ^^^ the trait `ZeroCopyAtMut<'_>` is not implemented for `f32`
  |
  = help: the following other types implement trait `ZeroCopyAtMut<'a>`:
            i16
            i32
            i64
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f64: ZeroCopyAtMut<'_>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:9:16
  |
9 |     pub large: f64,
  |                ^^^ the trait `ZeroCopyAtMut<'_>` is not implemented for `f64`
  |
  = help: the following other types implement trait `ZeroCopyAtMut<'a>`:
            i16
            i32
            i64
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f32: ZeroCopyAtMut<'_>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:20
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |                    ^^^^^^^^^^^ the trait `ZeroCopyAtMut<'_>` is not implemented for `f32`
  |
  = help: the following other types implement trait `ZeroCopyAtMut<'a>`:
            i16
            i32
            i64
            u16
            u32
            u64
            u8
  = note: required for `Vec<f32>` to implement `ZeroCopyAtMut<'_>`
  = note: this error originates in the derive macro `ZeroCopyMut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `f64: ZeroCopyAtMut<'_>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:20
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |                    ^^^^^^^^^^^ the trait `ZeroCopyAtMut<'_>` is not implemented for `f64`
  |
  = help: the following other types implement trait `ZeroCopyAtMut<'a>`:
            i16
            i32
            i64
            u16
            u32
            u64
            u8
  = note: required for `Vec<f64>` to implement `ZeroCopyAtMut<'_>`
  = note: this error originates in the derive macro `ZeroCopyMut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `f32: ZeroCopyAtMut<'_>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:8:9
  |
8 |     pub small: f32,
  |         ^^^^^ the trait `ZeroCopyAtMut<'_>` is not implemented for `f32`
  |
  = help: the following other types implement trait `ZeroCopyAtMut<'a>`:
            i16
            i32
            i64
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f64: ZeroCopyAtMut<'_>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:9:9
  |
9 |     pub large: f64,
  |         ^^^^^ the trait `ZeroCopyAtMut<'_>` is not implemented for `f64`
  |
  = help: the following other types implement trait `ZeroCopyAtMut<'a>`:
            i16
            i32
            i64
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f32: ZeroCopyAtMut<'_>` is not satisfied
  --> tests/ui/fail/54_floating_point_types.rs:10:9
   |
10 |     pub vec_f32: Vec<f32>,
   |         ^^^^^^^ the trait `ZeroCopyAtMut<'_>` is not implemented for `f32`
   |
   = help: the following other types implement trait `ZeroCopyAtMut<'a>`:
             i16
             i32
             i64
             u16
             u32
             u64
             u8
   = note: required for `Vec<f32>` to implement `ZeroCopyAtMut<'_>`

error[E0277]: the trait bound `f64: ZeroCopyAtMut<'_>` is not satisfied
  --> tests/ui/fail/54_floating_point_types.rs:11:9
   |
11 |     pub vec_f64: Vec<f64>,
   |         ^^^^^^^ the trait `ZeroCopyAtMut<'_>` is not implemented for `f64`
   |
   = help: the following other types implement trait `ZeroCopyAtMut<'a>`:
             i16
             i32
             i64
             u16
             u32
             u64
             u8
   = note: required for `Vec<f64>` to implement `ZeroCopyAtMut<'_>`

error[E0277]: the trait bound `f32: ZeroCopyAtMut<'_>` is not satisfied
  --> tests/ui/fail/54_floating_point_types.rs:12:9
   |
12 |     pub opt_f32: Option<f32>,
   |         ^^^^^^^ the trait `ZeroCopyAtMut<'_>` is not implemented for `f32`
   |
   = help: the following other types implement trait `ZeroCopyAtMut<'a>`:
             i16
             i32
             i64
             u16
             u32
             u64
             u8
   = note: required for `Option<f32>` to implement `ZeroCopyAtMut<'_>`

error[E0277]: the trait bound `f32: ZeroCopyNew<'static>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:8:16
  |
8 |     pub small: f32,
  |                ^^^ the trait `ZeroCopyNew<'static>` is not implemented for `f32`
  |
  = help: the following other types implement trait `ZeroCopyNew<'a>`:
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f64: ZeroCopyNew<'static>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:9:16
  |
9 |     pub large: f64,
  |                ^^^ the trait `ZeroCopyNew<'static>` is not implemented for `f64`
  |
  = help: the following other types implement trait `ZeroCopyNew<'a>`:
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f32: ZeroCopyNew<'_>` is not satisfied
  --> tests/ui/fail/54_floating_point_types.rs:10:18
   |
10 |     pub vec_f32: Vec<f32>,
   |                  ^^^^^^^^ the trait `ZeroCopyNew<'_>` is not implemented for `f32`
   |
   = help: the following other types implement trait `ZeroCopyNew<'a>`:
             u16
             u32
             u64
             u8
   = note: required for `Vec<f32>` to implement `ZeroCopyNew<'static>`

error[E0277]: the trait bound `f64: ZeroCopyNew<'_>` is not satisfied
  --> tests/ui/fail/54_floating_point_types.rs:11:18
   |
11 |     pub vec_f64: Vec<f64>,
   |                  ^^^^^^^^ the trait `ZeroCopyNew<'_>` is not implemented for `f64`
   |
   = help: the following other types implement trait `ZeroCopyNew<'a>`:
             u16
             u32
             u64
             u8
   = note: required for `Vec<f64>` to implement `ZeroCopyNew<'static>`

error[E0277]: the trait bound `f32: ZeroCopyNew<'_>` is not satisfied
  --> tests/ui/fail/54_floating_point_types.rs:12:18
   |
12 |     pub opt_f32: Option<f32>,
   |                  ^^^^^^^^^^^ the trait `ZeroCopyNew<'_>` is not implemented for `f32`
   |
   = help: the following other types implement trait `ZeroCopyNew<'a>`:
             u16
             u32
             u64
             u8
   = note: required for `Option<f32>` to implement `ZeroCopyNew<'static>`

error[E0277]: the trait bound `f32: ZeroCopyNew<'_>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:5:20
  |
5 | #[derive(ZeroCopy, ZeroCopyMut)]
  |                    ^^^^^^^^^^^ the trait `ZeroCopyNew<'_>` is not implemented for `f32`
  |
  = help: the following other types implement trait `ZeroCopyNew<'a>`:
            u16
            u32
            u64
            u8
  = note: required for `Option<f32>` to implement `ZeroCopyNew<'static>`
note: required because it appears within the type `FloatingPointConfig`
 --> tests/ui/fail/54_floating_point_types.rs:7:12
  |
7 | pub struct FloatingPoint {
  |            ^^^^^^^^^^^^^
  = note: this error originates in the derive macro `ZeroCopyMut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `f32: ZeroCopyNew<'a>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:8:16
  |
8 |     pub small: f32,
  |                ^^^ the trait `ZeroCopyNew<'a>` is not implemented for `f32`
  |
  = help: the following other types implement trait `ZeroCopyNew<'a>`:
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f64: ZeroCopyNew<'a>` is not satisfied
 --> tests/ui/fail/54_floating_point_types.rs:9:16
  |
9 |     pub large: f64,
  |                ^^^ the trait `ZeroCopyNew<'a>` is not implemented for `f64`
  |
  = help: the following other types implement trait `ZeroCopyNew<'a>`:
            u16
            u32
            u64
            u8

error[E0277]: the trait bound `f32: ZeroCopyNew<'_>` is not satisfied
  --> tests/ui/fail/54_floating_point_types.rs:10:18
   |
10 |     pub vec_f32: Vec<f32>,
   |                  ^^^^^^^^ the trait `ZeroCopyNew<'_>` is not implemented for `f32`
   |
   = help: the following other types implement trait `ZeroCopyNew<'a>`:
             u16
             u32
             u64
             u8
   = note: required for `Vec<f32>` to implement `ZeroCopyNew<'a>`

error[E0277]: the trait bound `f64: ZeroCopyNew<'_>` is not satisfied
  --> tests/ui/fail/54_floating_point_types.rs:11:18
   |
11 |     pub vec_f64: Vec<f64>,
   |                  ^^^^^^^^ the trait `ZeroCopyNew<'_>` is not implemented for `f64`
   |
   = help: the following other types implement trait `ZeroCopyNew<'a>`:
             u16
             u32
             u64
             u8
   = note: required for `Vec<f64>` to implement `ZeroCopyNew<'a>`

error[E0277]: the trait bound `f32: ZeroCopyNew<'_>` is not satisfied
  --> tests/ui/fail/54_floating_point_types.rs:12:18
   |
12 |     pub opt_f32: Option<f32>,
   |                  ^^^^^^^^^^^ the trait `ZeroCopyNew<'_>` is not implemented for `f32`
   |
   = help: the following other types implement trait `ZeroCopyNew<'a>`:
             u16
             u32
             u64
             u8
   = note: required for `Option<f32>` to implement `ZeroCopyNew<'a>`
